Fix dialog text being hardly readable in dark theme

--- a/src/css/ingame_hud/dialogs.scss
+++ b/src/css/ingame_hud/dialogs.scss
@@ -118,6 +118,10 @@
             pointer-events: all;
             @include S(width, 350px);
 
+            @include DarkThemeOverride {
+                color: #aaa;
+            }
+
             strong {
                 font-weight: bold;
             }
